src/test/resources/annotator/UnresolvedTypeReference_Extension.proto
syntax = "proto2";

package annotator;

extend <error descr="Unresolved reference">Unresolved</error> {

}